<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>hack.sango</groupId>
		<artifactId>game-parent</artifactId>
		<version>1.1</version>
		<relativePath>../maven_base_pom/pom.xml</relativePath>
	</parent>
	<artifactId>game-server</artifactId>
	<version>1.1</version>
	<name>game-server</name>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<skip.protobuf.gen>true</skip.protobuf.gen>
	</properties>
	<dependencies>
		<!-- seed common lib -->
		<dependency>
			<groupId>hack.sango</groupId>
			<artifactId>seed-lion</artifactId>
		</dependency>
		<dependency>
			<groupId>hack.sango</groupId>
			<artifactId>open-sdk</artifactId>
		</dependency>
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
		</dependency>
		<!-- logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-all</artifactId> <!-- Use 'netty-all' for 4.0 or above -->
		</dependency>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.protobuf</groupId>
			<artifactId>protobuf-java</artifactId>
		</dependency>
		<dependency>
			<groupId>io.protostuff</groupId>
			<artifactId>protostuff-core</artifactId>
		</dependency>
		<dependency>
			<groupId>io.protostuff</groupId>
			<artifactId>protostuff-runtime</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-dbutils</groupId>
			<artifactId>commons-dbutils</artifactId>
		</dependency>
		<!-- json -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
		</dependency>
		<dependency>
			<groupId>io.github.lukehutch</groupId>
			<artifactId>fast-classpath-scanner</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
		</dependency>
        <dependency>
            <groupId>hack.sango</groupId>
            <artifactId>lib-lion</artifactId>
            <version>1.1</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>resources</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<!--source>${basedir}/target/generated-sources</source-->
								<source>${basedir}/src_deprecated</source>
								<!-- 我们可以通过在这里添加多个source节点，来添加任意多个源文件夹 -->
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.0</version>
				<!-- The configuration of the plugin -->
				<configuration>
					<!-- Specifies the configuration file of the assembly plugin -->
					<descriptors>
						<descriptor>resources/assembly/assembly.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id> <!-- this is used for inheritance merges -->
						<phase>package</phase> <!-- bind to the packaging phase -->
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>libs/</classpathPrefix>
							<mainClass>game.GameServer</mainClass>
						</manifest>
						<manifestEntries>
							<Class-Path>.</Class-Path>
						</manifestEntries>
					</archive>
					<excludes>
						<exclude>game/test</exclude>
						<exclude>game/test/**/*</exclude>
						<exclude>conf</exclude>
						<exclude>conf/**/*</exclude>
						<exclude>assembly</exclude>
						<exclude>assembly/**/*</exclude>
						<exclude>script</exclude>
						<exclude>script/**/*</exclude>
						<exclude>template</exclude>
						<exclude>template/**/*</exclude>
						<exclude>**/*.proto</exclude>
						<exclude>**/*.xml</exclude>
						<exclude>**/*.key</exclude>
						<exclude>**/*.pem</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
				<configuration>
					<skip>${skip.protobuf.gen}</skip>
				</configuration>
				<executions>
					<execution>
						<id>compile-protoc</id>
						<phase>generate-sources</phase>
						<configuration>
							<target>
								<ant antfile="${basedir}/build_protoc.xml">
									<target name="main" />
								</ant>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!--plugin>
				<groupId>io.protostuff</groupId>
				<artifactId>protostuff-maven-plugin</artifactId>
				<version>1.6.2</version>
				<configuration>
					<protoModules>
						<protoModule>
							<source>resources/protostuff</source>
							<outputDir>target/generated-sources</outputDir>
							<output>java_bean</output>
							<encoding>UTF-8</encoding>
							<options>
								<property>
									<name>separate_schema</name>
								</property>
								<property>
									<name>generate_field_map</name>
								</property>
							</options>
						</protoModule>
					</protoModules>
				</configuration>
				<executions>
					<execution>
						<id>generate-protosutff-files</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin-->
			<!-- plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.3.2</version>
			    <configuration>
			        <executable>java</executable>
			        <arguments>
			            <argument>-server</argument>
			            <argument>-Xms1024M</argument>
			            <argument>-Xmx2048M</argument>
			            <argument>-Xmn768M</argument>
			            <argument>-XX:PermSize=32m</argument>
			            <argument>-XX:MaxPermSize=64m</argument>
			            <argument>-XX:+UseConcMarkSweepGC</argument>
			            <argument>-XX:+UseCMSCompactAtFullCollection</argument>
			            <argument>-XX:+UseCMSInitiatingOccupancyOnly</argument>
			            <argument>-XX:CMSInitiatingOccupancyFraction=70</argument>
			            <argument>-XX:+CMSParallelRemarkEnabled</argument>
			            <argument>-XX:SoftRefLRUPolicyMSPerMB=0</argument>
			            <argument>-XX:+CMSClassUnloadingEnabled</argument>
			            <argument>-XX:+DisableExplicitGC</argument>
			            <argument>-XX:SurvivorRatio=20</argument>
			            <argument>-classpath</argument>
			            <argument>./resources;target/classes</argument>
			            <classpath/>
			            <argument>game.GameServer</argument>
			        </arguments>
			    </configuration>
			</plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>game.GameServer</mainClass>
								</transformer>
								<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
									<resource>game.properties</resource>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-antrun-plugin
										</artifactId>
										<versionRange>
											[1.8,)
										</versionRange>
										<goals>
											<goal>run</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											build-helper-maven-plugin
										</artifactId>
										<versionRange>
											[1.12,)
										</versionRange>
										<goals>
											<goal>add-source</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>